DB-199 transaction request 조회 기능