@@ -1,38 +1,43 @@
 package inflma.opAdmin.controller;
 
-import inflma.opAdmin.service.MoneyServiceImpl;
-import inflma.opAdmin.util.FirebaseCloudMessageService;
+import inflma.opAdmin.dto.TransactionRequestDto;
+import inflma.opAdmin.result.ResultPage;
+import inflma.opAdmin.service.TransactionRequestServiceImpl;
 import lombok.RequiredArgsConstructor;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
 import org.apache.poi.ss.usermodel.Workbook;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("transaction-request")
-public class MoneyController {
+@RequestMapping("inflma/transaction-request")
+public class TransactionRequestController {
 
-    private final MoneyServiceImpl moneyService;
+    private final TransactionRequestServiceImpl transactionRequestService;
+
+    @GetMapping(value = "withdrawal")
+    @ResponseBody
+    public ResultPage transactionRequest(
+            TransactionRequestDto transactionRequestDto
+    ){
+        return transactionRequestService.withdrawal(transactionRequestDto);
+    }
 
     @GetMapping(value = "excel")
     public void transactionRequestExcel(
             HttpServletResponse response,
             @RequestParam HashMap<String, Object> param
     ) throws IOException {
-        List<HashMap<String, Object>> body = moneyService.transactionRequestExcel(param);
-        List<String> header = Arrays.asList("은행명", "계좌번호", "이름", "요청한 금액", "","","","일련번호");
+        List<HashMap<String, Object>> body = transactionRequestService.transactionRequestExcel(param);
+        List<String> header = List.of("은행명", "계좌번호", "이름", "요청한 금액", "","","","일련번호");
 
         transactionRequestExcelData(response, header, body);
     }
@@ -41,14 +46,14 @@ public class MoneyController {
     public void refusalTransactionRequest(
             @RequestParam HashMap<String, Object> param
     ) throws IOException {
-        moneyService.refusalTransactionRequest(param);
+        transactionRequestService.refusalTransactionRequest(param);
     }
 
     @GetMapping(value="complete")
     public void completeTransactionRequest(
             @RequestParam HashMap<String, Object> param
     ){
-        moneyService.completeTransactionRequest(param);
+        transactionRequestService.completeTransactionRequest(param);
     }
 
     private void transactionRequestExcelData(HttpServletResponse response, List<String> header, List<HashMap<String, Object>> body) throws IOException {
